--- a/index.html
+++ b/index.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-<span> Working on it... </span>
+<div class="profile">
+  <img id="avatar" src="/static/images/phili.png"/>
+  <ul id="social">
+    <li>
+      <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+    </li>
+    <li>
+      <a href="https://github.com/PhilibertDugas" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    </li>
+  </ul>
+</div>
