--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="profile">
-  <img id="avatar" src="/static/images/phili.png"/>
+  <img id="avatar" src="/static/images/phili.png" alt="avatar"/>
   <ul id="social">
     <li>
       <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
