--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: default
   <img id="avatar" src="/static/images/phili.png" alt="avatar"/>
   <ul id="social">
     <li>
-      <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+      <a href="https://ca.linkedin.com/in/philibertdugas" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
     </li>
     <li>
-      <a href="https://github.com/PhilibertDugas" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+      <a href="https://github.com/PhilibertDugas" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
     </li>
   </ul>
 </div>
