First blog post -- woot

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: info
   {% for post in site.posts %}
   <li>
     <a href="{{ post.url }}">
-      <h1>{{ post.title }}</h1>
+      <h1>{{ post.excerpt }}</h1>
     </a>
   </li>
   {% endfor %}
